<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_user_name_hint">Enter your username</string>
    <string name="title_login_save_login_info">Save login info</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_employee_management">Employee Management</string>
    <string name="table_header_id">No.</string>
    <string name="table_header_name">Full Name</string>
    <string name="table_header_email">Email</string>
    <string name="employee_description">The employee list in this system is regularly updated to ensure accuracy and transparency in internal operations. Keeping track of each individual not only supports administrative management goals but also serves as a foundation for implementing long-term HR plans such as training, promotions, rewards, or transfers.\n\nThis list also acts as an effective tool for inter-departmental coordination. By keeping email contact information up to date, users can actively connect, send documents, or request assistance without wasting time searching for scattered details. Additionally, the system can later support adding notes like phone numbers, departments, birthdays, or notable achievements, contributing to a friendly and professional workplace culture.</string>
    <string name="title_healthcare">Healthcare</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee HealthCare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_product">Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:\n</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_product_detail">Product Details</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_quantity">Quantity:</string>
    <string name="title_price">Price:</string>
    <string name="title_category_id">Category ID:</string>
    <string name="title_description">Description:</string>
    <string name="title_image_id">Image ID:</string>
    <string name="title_report">Report</string>


</resources>
